2.11.0
	- added implementation of elasticity solver by Kugelstadt et al. "Fast Corotated Elastic SPH Solids with Implicit Zero-Energy Mode Control", 2021
	- added fast AVX Cholesky solver written by José Antonio Fernández-Fernández
	- added a tool to skin a visual mesh to the moving particles of an elastic solid in a postprocessing step
	- extended the volume sampling tool by the method of Kugelstadt et al. 2021
	- extended the volume sampling tool by the method of Jiang et al. 2015
	- now each fluid model has an id
	- extended exporters to write one file per object id

2.10.1
	- added new foam generator tool to generate spray, foam and bubble particles in a postprocessing step in order to improve the visual realism of the final rendering
	- added documentation of the foam generator

2.10.0
	- added support of embedded Python scripts (must be activated in CMake)
	- added possibility to animate rigid bodies in Python
	- added Implicit Compressible SPH pressure solver by Gissler et al. 2020
	- fixed bug in AnimationField (thanks to Lukas Westhofen)
	- improved stability of volume maps

2.9.2
	- added ParaView partio plugin
	- extended tooltips by json key
	- small avx improvements
	- fluid can have an initial angular velocity
	- improved Maya plugin
	- added support of asynchronous file writing in the partio exporter
	- added reset callback 
2.9.1
	- added documentation about how to implement an exporter
	- added a Python data exporter example (can export rigid bodies in all formats supported by meshio)
	- added an OBJ rigid body exporter
	- implemented a simple interface to register own particle and rigid body exporters
	- extracted the scene configuration in a singleton class
	- simplified the interface to register a new non-pressure force

2.9.0 
	- added new surface tension model (thanks to Fernando Zorilla and Marcel Ritter)
	- added a test for reading and writing the state of a simulation
	- updated to Eigen 3.3.8