@@ -1,3 +1,5 @@
+	- Linux fixes
+	
 2.11.0
 	- added implementation of elasticity solver by Kugelstadt et al. "Fast Corotated Elastic SPH Solids with Implicit Zero-Energy Mode Control", 2021
 	- added fast AVX Cholesky solver written by José Antonio Fernández-Fernández
